# Linux-Project

./: README.md
part1/: part1.sh  part1.txt  part2.sh  part2.txt
part2/project/Application/: Makefile  app.c
part2/project/Modules/caesar_cipher/: caesar_cipher.mk
part2/project/Modules/xor_cipher/: xor_cipher.mk
part2_cmake/project/: CMakeLists.txt
part2_cmake/project/Application/: CMakeLists.txt
part2_cmake/project/Modules/caesar_cipher/: CMakeLists.txt
part2_cmake/project/Modules/xor_cipher/: CMakeLists.txt
part3/: process_manager.c  process_manger
